Fix css font on mobile

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -437,7 +437,7 @@ details[open] {
     width: 30vw;
   }
   .navlink {
-    padding: 1rem;
+    padding: 0.5rem;
     font-size: 12px;
   }
   /* Footer */
@@ -549,7 +549,7 @@ details[open] {
 
   .image-banner h2 {
     padding-left: 1.5rem;
-    font-size: 24px;
+    font-size: 18px;
     max-width: 52vw;
   }
 
